Added Liquibase for database migration.