@@ -1,14 +1,12 @@
 package com.yardflowpro.service.impl;
 
+import com.yardflowpro.dto.AppointmentDto;
 import com.yardflowpro.dto.CheckInRequestDto;
 import com.yardflowpro.dto.CheckOutRequestDto;
 import com.yardflowpro.exception.InvalidOperationException;
 import com.yardflowpro.exception.ResourceNotFoundException;
 import com.yardflowpro.model.*;
-import com.yardflowpro.repository.AppointmentRepository;
-import com.yardflowpro.repository.CarrierRepository;
-import com.yardflowpro.repository.SiteRepository;
-import com.yardflowpro.repository.TrailerRepository;
+import com.yardflowpro.repository.*;
 import com.yardflowpro.service.AppointmentService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -17,6 +15,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class AppointmentServiceImpl implements AppointmentService {
@@ -25,17 +24,20 @@ public class AppointmentServiceImpl implements AppointmentService {
     private final SiteRepository siteRepository;
     private final TrailerRepository trailerRepository;
     private final CarrierRepository carrierRepository;
+    private final GateRepository gateRepository;
 
     @Autowired
     public AppointmentServiceImpl(
             AppointmentRepository appointmentRepository,
             SiteRepository siteRepository,
             TrailerRepository trailerRepository,
-            CarrierRepository carrierRepository) {
+            CarrierRepository carrierRepository,
+            GateRepository gateRepository) {
         this.appointmentRepository = appointmentRepository;
         this.siteRepository = siteRepository;
         this.trailerRepository = trailerRepository;
         this.carrierRepository = carrierRepository;
+        this.gateRepository = gateRepository;
     }
 
     @Override
@@ -45,17 +47,31 @@ public class AppointmentServiceImpl implements AppointmentService {
         Site site = siteRepository.findById(checkInRequest.getSiteId())
                 .orElseThrow(() -> new ResourceNotFoundException("Site not found with id: " + checkInRequest.getSiteId()));
 
+        // Retrieve gate
+        Gate gate = gateRepository.findById(checkInRequest.getGateId())
+                .orElseThrow(() -> new ResourceNotFoundException("Gate not found with id: " + checkInRequest.getGateId()));
+        
+        // Verify gate is at the same site
+        if (!gate.getSite().getId().equals(site.getId())) {
+            throw new InvalidOperationException("Gate does not belong to the specified site");
+        }
+        
+        // Verify gate has CHECK_IN or CHECK_IN_OUT function
+        if (gate.getFunction() != Gate.GateFunction.CHECK_IN && gate.getFunction() != Gate.GateFunction.CHECK_IN_OUT) {
+            throw new InvalidOperationException("Selected gate does not support check-in operations");
+        }
+
         // Retrieve carrier
-        Carrier carrier_detail = carrierRepository.findById(checkInRequest.getCarrierId())
-        .orElseThrow(() -> new ResourceNotFoundException("Carrier not found with id: " + checkInRequest.getCarrierId()));
+        Carrier carrier = carrierRepository.findById(checkInRequest.getCarrierId())
+                .orElseThrow(() -> new ResourceNotFoundException("Carrier not found with id: " + checkInRequest.getCarrierId()));
 
         // Check if carrier is eligible for this site
-        boolean isCarrierEligible = carrier_detail.getEligibleSites().stream()
+        boolean isCarrierEligible = carrier.getEligibleSites().stream()
                 .anyMatch(eligibleSite -> eligibleSite.getId().equals(site.getId()));
                 
         if (!isCarrierEligible) {
             throw new InvalidOperationException(
-                "Carrier " + carrier_detail.getName() + " (ID: " + carrier_detail.getId() + 
+                "Carrier " + carrier.getName() + " (ID: " + carrier.getId() + 
                 ") is not eligible for site " + site.getName() + " (ID: " + site.getId() + ")"
             );
         }
@@ -73,9 +89,6 @@ public class AppointmentServiceImpl implements AppointmentService {
         }
         
         // Set trailer properties
-        Carrier carrier = carrierRepository.findById(checkInRequest.getCarrierId())
-                .orElseThrow(() -> new ResourceNotFoundException("Carrier not found with id: " + checkInRequest.getCarrierId()));
-        
         trailer.setCarrier(carrier);
         trailer.setLoadStatus(checkInRequest.getLoadStatus());
         trailer.setCondition(checkInRequest.getTrailerCondition());
@@ -102,6 +115,7 @@ public class AppointmentServiceImpl implements AppointmentService {
         // Create appointment
         Appointment appointment = new Appointment();
         appointment.setSite(site);
+        appointment.setCheckInGate(gate);  // Set the gate used for check-in
         appointment.setTrailer(trailer);
         appointment.setType(checkInRequest.getAppointmentType());
         appointment.setScheduledTime(checkInRequest.getScheduledTime());
@@ -128,6 +142,26 @@ public class AppointmentServiceImpl implements AppointmentService {
         // Retrieve trailer
         Trailer trailer = trailerRepository.findById(checkOutRequest.getTrailerId())
                 .orElseThrow(() -> new ResourceNotFoundException("Trailer not found with id: " + checkOutRequest.getTrailerId()));
+                
+        // Retrieve gate
+        Gate gate = gateRepository.findById(checkOutRequest.getGateId())
+                .orElseThrow(() -> new ResourceNotFoundException("Gate not found with id: " + checkOutRequest.getGateId()));
+        
+        // Retrieve the current appointment
+        Appointment appointment = trailer.getCurrentAppointment();
+        if (appointment == null) {
+            throw new ResourceNotFoundException("No active appointment found for trailer id: " + trailer.getId());
+        }
+        
+        // Verify gate is at the same site as the appointment
+        if (!gate.getSite().getId().equals(appointment.getSite().getId())) {
+            throw new InvalidOperationException("Gate does not belong to the same site as the appointment");
+        }
+        
+        // Verify gate has CHECK_OUT or CHECK_IN_OUT function
+        if (gate.getFunction() != Gate.GateFunction.CHECK_OUT && gate.getFunction() != Gate.GateFunction.CHECK_IN_OUT) {
+            throw new InvalidOperationException("Selected gate does not support check-out operations");
+        }
         
         // Update trailer details
         trailer.setCondition(checkOutRequest.getTrailerCondition());
@@ -140,7 +174,6 @@ public class AppointmentServiceImpl implements AppointmentService {
             door.setCurrentTrailer(null);
             door.setStatus(Door.DoorStatus.AVAILABLE);
             trailer.setAssignedDoor(null);
-            // No need to explicitly save door here as it will be cascaded through trailer
         }
         
         // Handle yard location relationship
@@ -149,7 +182,6 @@ public class AppointmentServiceImpl implements AppointmentService {
             location.setCurrentTrailer(null);
             location.setStatus(YardLocation.LocationStatus.AVAILABLE);
             trailer.setYardLocation(null);
-            // No need to explicitly save location here as it will be cascaded through trailer
         }
         
         // Stop detention timer if running
@@ -157,14 +189,11 @@ public class AppointmentServiceImpl implements AppointmentService {
             trailer.setDetentionActive(false);
         }
         
-        // Retrieve the current appointment (safe even with circular references due to annotations)
-        Appointment appointment = trailer.getCurrentAppointment();
-        if (appointment == null) {
-            throw new ResourceNotFoundException("No active appointment found for trailer id: " + trailer.getId());
-        }
-        
         // Update appointment
         appointment.setStatus(Appointment.AppointmentStatus.COMPLETED);
+        appointment.setCompletionTime(LocalDateTime.now());
+        appointment.setCheckOutGate(gate);  // Set the gate used for check-out
+        
         if (checkOutRequest.getGuardComments() != null && !checkOutRequest.getGuardComments().isEmpty()) {
             if (appointment.getGuardComments() != null) {
                 appointment.setGuardComments(appointment.getGuardComments() + 
@@ -189,12 +218,10 @@ public class AppointmentServiceImpl implements AppointmentService {
         Site site = siteRepository.findById(siteId)
                 .orElseThrow(() -> new ResourceNotFoundException("Site not found with id: " + siteId));
         
-        // Use repository method instead of stream filtering if available
-        // Otherwise, use the current implementation
         return appointmentRepository.findBySite(site).stream()
                 .filter(a -> a.getStatus() == Appointment.AppointmentStatus.CHECKED_IN || 
                              a.getStatus() == Appointment.AppointmentStatus.IN_PROGRESS)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -209,5 +236,58 @@ public class AppointmentServiceImpl implements AppointmentService {
                 .orElseThrow(() -> new ResourceNotFoundException("Trailer not found with id: " + trailerId));
         
         return appointmentRepository.findByTrailer(trailer);
+    }
+    
+    @Override
+    public List<Appointment> getAppointmentsByGateId(Long gateId) {
+        Gate gate = gateRepository.findById(gateId)
+                .orElseThrow(() -> new ResourceNotFoundException("Gate not found with id: " + gateId));
+        
+        // In a real implementation, we'd need a repository method to find appointments by gate
+        // For now, we'll do it the simple way by fetching all and filtering
+        return appointmentRepository.findAll().stream()
+                .filter(a -> (a.getCheckInGate() != null && a.getCheckInGate().getId().equals(gateId)) || 
+                             (a.getCheckOutGate() != null && a.getCheckOutGate().getId().equals(gateId)))
+                .collect(Collectors.toList());
+    }
+    
+    @Override
+    public AppointmentDto convertToDto(Appointment appointment) {
+        AppointmentDto dto = new AppointmentDto();
+        dto.setId(appointment.getId());
+        dto.setStatus(appointment.getStatus().name());
+        dto.setAppointmentType(appointment.getType().name());
+        dto.setScheduledTime(appointment.getScheduledTime());
+        dto.setActualArrivalTime(appointment.getActualArrivalTime());
+        dto.setCompletionTime(appointment.getCompletionTime());
+        dto.setDriverInfo(appointment.getDriverInfo());
+        dto.setGuardComments(appointment.getGuardComments());
+        
+        if (appointment.getSite() != null) {
+            dto.setSiteId(appointment.getSite().getId());
+            dto.setSiteName(appointment.getSite().getName());
+        }
+        
+        if (appointment.getTrailer() != null) {
+            dto.setTrailerId(appointment.getTrailer().getId());
+            dto.setTrailerNumber(appointment.getTrailer().getTrailerNumber());
+            
+            if (appointment.getTrailer().getCarrier() != null) {
+                dto.setCarrierId(appointment.getTrailer().getCarrier().getId());
+                dto.setCarrierName(appointment.getTrailer().getCarrier().getName());
+            }
+        }
+        
+        if (appointment.getCheckInGate() != null) {
+            dto.setCheckInGateId(appointment.getCheckInGate().getId());
+            dto.setCheckInGateName(appointment.getCheckInGate().getName());
+        }
+        
+        if (appointment.getCheckOutGate() != null) {
+            dto.setCheckOutGateId(appointment.getCheckOutGate().getId());
+            dto.setCheckOutGateName(appointment.getCheckOutGate().getName());
+        }
+        
+        return dto;
     }
 }
